--- a/anasayfa.html
+++ b/anasayfa.html
@@ -14,10 +14,11 @@
 
 
 <body onload="welcome()">
+
  <nav class="navbar navbar-expand-lg navbar-light menü">
         <a class="navbar-brand" href="#">Hakkımda </a>
         <div class="collapse navbar-collapse" >
-          <ul class="navbar-nav text-white" >
+          <ul class="navbar-nav " >
             <li class="nav-item "><a class="nav-link" href="#">İlgi Alanlarım</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="Sehrim.html">Şehrim</a>
@@ -77,8 +78,6 @@
  
   </div>
 </div>
-
-
 
 
 <div class="container-fluid ">
