--- a/anasayfa.html
+++ b/anasayfa.html
@@ -13,24 +13,34 @@
 </head>
 
 
-<body onload="welcome()">
+<body>
+  <nav class="navbar navbar-expand navbar-dark  menü">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
 
- <nav class="navbar navbar-expand-lg navbar-light menü">
-        <a class="navbar-brand" href="#">Hakkımda </a>
-        <div class="collapse navbar-collapse" >
-          <ul class="navbar-nav " >
-            <li class="nav-item "><a class="nav-link" href="#">İlgi Alanlarım</a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="Sehrim.html">Şehrim</a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="#">@İletişim Bilgiler</a>
-            </li>
-          </ul>
-        </div>
- </nav>
- 
+        <li class="nav-item">
+          <a class="nav-link active" href="anasayfa.html.">ANA SAYFA</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link" href="İlgiAlanlarım.html">İLGİ ALANLARIM</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="İLETİŞİM.html">İLETİŞİM BİLGİLERİ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Sehrim.html">ŞEHRİM</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav my-2 my-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="giriş.html">GİRİŞ YAP</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
  <div class="container-flu"> <!-- GİRİŞTEKİ RESİM EKLENDİ-->
-    <img class="img-fluid  w-100 "  src="RESİMLER/bilgisayar.jpg">
+    <img class="img-fluid  w-100 "  src="RESİMLER/bilgisayar.jpg" alt="çalışma masası">
   </div>
 
 
@@ -73,7 +83,7 @@
       <p>İlkokul,ortaokul(Pınarkule İlkokulu-ortaokulu) ve liseyi(Cahit Zarifoğlu anadolu Lisesi) İstanbul'da okudum.Şuan Sakarya Üniversitesinde bilgisayar mühendisliği okuyorum.1.Sınıf öğrencisiyim.
         Sakarya üniversitesinin resmi hesabına ulaşmak için <a target=" target=_blank" href="https://www.sakarya.edu.tr/">buraya </a>tıklayabilirisinz.
       </p>
-      <img class="img-fluid pb-2"  src="RESİMLER\saü.jpg">
+      <img class="img-fluid pb-2"  src="RESİMLER\saü.jpg" alt="sakarya üniversitesi">
       </div>
  
   </div>
@@ -94,12 +104,12 @@
            </div>
               <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                  <div class="card-body">
-                    <img src="RESİMLER\disenchantmentt.jpg" class="img-fluid" style="width: 200px;">
-                    <img src="RESİMLER\esaretinbedeli.jpg" class="img-fluid" style="width: 200px;">
-                    <img src="RESİMLER\benjaminbutton.jpg" class="img-fluid" style="width: 200px;">
-                    <img src="RESİMLER\gitbaşımdan.jpg" class="img-fluid" style="width: 200px;">
-                    <img src="RESİMLER\crown.jpg" class="img-fluid" style="width: 200px;">
-                    <img src="RESİMLER/Mr_and_mrs_smith_poster.jpg" class="img-fluid" style="width: 200px;">
+                    <img src="RESİMLER\disenchantmentt.jpg" class="img-fluid" style="width: 200px;" alt="disenchantment">
+                    <img src="RESİMLER\esaretinbedeli.jpg" class="img-fluid" style="width: 200px;" alt="esaretin bedeli">
+                    <img src="RESİMLER\benjaminbutton.jpg" class="img-fluid" style="width: 200px;" alt="benjamin button">
+                    <img src="RESİMLER\gitbaşımdan.jpg" class="img-fluid" style="width: 200px;" alt="git başımdan">
+                    <img src="RESİMLER\crown.jpg" class="img-fluid" style="width: 200px;" alt="crown">
+                    <img src="RESİMLER/Mr_and_mrs_smith_poster.jpg" class="img-fluid" style="width: 200px;" alt="mr and mrs smith">
 
                   </div>
               </div>
@@ -116,12 +126,5 @@
    
   </footer>
  
-  <script>
-    
-function welcome()
-{
-  alert("HOŞGELDİN B211210004");
-}
-
-  </script>
+ 
 </body>
