--- a/CV.html
+++ b/CV.html
@@ -1,20 +1,133 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <link rel="stylesheet" type="text/css" href="cvstil.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-</head>
+    <title>CV</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+
+  <link rel="stylesheet" type="text/css" href="cvstil.css" />
+  <!--meü için-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="anasayfastil.css" />
+
+
 
 <body>
-<header>
-</header>
 
+<nav>
+    <div><!--menü-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark  menü">
+            <div class="container-fluid">
+                <a class="navbar-brand disabled text-white">ALEYNA KARA</a>
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <div class="navbar-nav">
+                        <a href="anasayfa.html" class="nav-item nav-link  text-white-50">ANA SAYFA</a>
+                        <a href="Sehrim.html" class="nav-item nav-link text-white-50">ŞEHRİM VE MİRASIMIZ</a>
+                        <a href="CV.html" class="nav-item nav-link text-white-50 active">ÖZGEÇMİŞİM</a>
+                        <a href="İlgiAlanlarım.html" class="nav-item nav-link text-white-50">İLGİ ALANLARIM</a>                    
+                    </div>
+                    <div class="navbar-nav ms-auto">
+                        <a href="İLETİŞİM.html" class="nav-item nav-link text-white-50" tabindex="-1">İLETİŞİM</a>
+                        <a href="giriş.html" class="nav-item nav-link text-white-50">GİRİŞ YAP</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </div>
+</nav>
+
+<article>
+    <section>
+        <div class="container mt-2">
+            <div class="row">
+                <div class="col-lg-5 col-sm-12">
+                    <div class="container d-inline-block h-100 sol"><!--RESİM VE ALT KISMI-->
+                        <img class="img-fluid rounded-circle mx-auto mt-5 d-block " src="RESİMLER\benn.jpg"  width="300" height="300" alt="aleyna kara resim">
+                        <br>
+                        <h3>İLETİŞİM</h3>
+                        <hr>
+                         <ul id="listeişaret" >
+                          <li>TELEFON : 0537 275 0218</li>
+                          <li>E-MAIL : aleynakara.16@hotmail.com</li>
+                          <li>GİTHUB :<a href="https://twitter.com/_aleynakara_" target="_blank"> @aleyna_karaa_</a></li>
+                          <li>LİNKEDİN :<a href="https://www.linkedin.com/in/aleyna-kara-0a5690218/" target="_blank"> @aleyna kara</a></li>
+                          <li>İNSTAGRAM :<a href="https://www.instagram.com/aleyna_karaa_/" target="_blank">@aleyna_karaa_</a></li>
+                          <li>TWİTTER :<a href="https://twitter.com/_aleynakara_" target="_blank"> @aleyna_karaa_</a></li><br>
+                          <li>ADRES-1 : Adnan Kahveci Mahallesi,Anadolu Caddesi,Anadolu Apartmanı,Beylikdüzü,İstanbul</li><br>
+                          <li>ADRES-2 : Kemalpaşa Mahallesi,Üniversite Caddesi,KYK kız öğrenci yurdu,Serdivan,Sakarya</li>
+
+
+                         </ul>
+                    </div>
+                </div>
+
+                <div class="col-lg-7 col-sm-12 text-md-left"><!--TANITIM KISMI-->
+                    <h1 class="display-1  text-sm-center ">ALEYNA KARA</h1>
+                    <h3>KİŞİSEL BİLGİLER</h3>
+                    <hr>
+                    <p>Doğma büyüme İstanbulluyum.Beylikdüzünde yaşıyorum.20 yaşındayım ve Sakarya Üniversitesinde Bilgisayar Mühendisliği okuyorum.O yüzden şuanda Sakarya'da kalıyorum.
+                        <ul>
+                            <li>DOĞUM TARİHİ VE YERİ : 18.02.2002 ,Bahçelievler</li>
+                            <li>SÜRÜCÜ EHLİYETİ : yok.</li>
+                            <li>MEDENİ DURUMU : bekar</li>
+                            <li>-sıgara ve alkol kullanmıyorum.</li>
+                        </ul>
+                    </p>
+                    <br>
+
+                    <h3>EĞİTİM</h3>
+                    <hr>
+                    <h6>PINARKULE İLK/ORTAOKUL'U</h6>
+                    <p>(2009-2016)<br>İlk okuldan mezun olduğum sene okul ortaokula dönünce hem ilkokulu hem de ortaokulu burada okumuş oldum.Not ortalamam genel olarak 90 ve üzeridir.Her sene taktir belgesi aldım.Ayrıca üstün başrı belgesi,örnek öğrenci belgeside aldım.
+                    </p>
+
+                    <h6>SAKARYA ÜNİVERSİTESİ</h6>
+                    <p>(2021-devam..)<br> yılında Bilgisayar Mühendiliği(Türkçe) bölmüne giriş yaptım.Şuan birinci sınıfım.İlk dönem Matematik1,Fizik1,Programlamaya Giriş,Lineer Cebir,Türk Dili Ve Edebiyatı derslerini aldım ve ilk döenm ortalamam 3,07'dir.
+                      Aynı zamanda "SAÜ SİBER","SAÜ BİLİŞİM TOPLULUĞU" ve "SAÜ İHA TOPLULUĞU" gibi kulüplere üyeyim.
+                    </p><br>
+
+                    <h3>BECERİLER</h3>
+                    <hr>
+                    <p>
+                        <ul>
+                            <li>BİLGİSAYAR BECERİLERİ : Office programları(orta),c++(orta),c#(orta) ve html-css-javascript(orta)</li>
+                            <li>YABANCI DİL BECERİLERİ : İNGİLİZCE(Okuma:orta ,Yazma:orta,Dinleme :orta,Konuşma:zayıf) </li>
+                        </ul>
+                    </p><br>
+
+                    <h3>İLGİ ALANLARIM</h3>
+                    <hr>
+                    <p>Resim çizmek. film/dizi izlemek,kitap okumak,dans ve paten</p><br>
+
+                    <h3>İŞ DENEYİMİ</h3>
+                    <hr>
+                    <p>Henüz bir iş deneyimim yoktur.</p>
+                    
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+</article>
+
+
+<footer class="bg-dark text-white mt-3">
    
-
+    <small><i>&copy 2022 Telif Hakları Saklıdır<br> aleyna kara</i></small>
+     
+</footer>
 
 
 
