--- a/giriş.html
+++ b/giriş.html
@@ -28,7 +28,7 @@
         </div> 
         <footer class="text-danger small">please fill in the fields with *</footer> 
         <div class="display-4 text-danger small" id="hatalı"></div>
-
+</form>
     </div>
    
 
