--- a/Mirasımız.html
+++ b/Mirasımız.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:300,400|Roboto|Open+Sans:300,400,700">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-   
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -17,13 +16,14 @@
   </head>
 
 <body>
-    
+
+
 <div class="row"><!--RESİM VE BAŞLIK-->
   <div class="col-12">
     <div class="carousel ">
       <div class="carousel-inner ">
         <div class="carousel-item active ">      
-          <img class="img-fluid w-100" src="RESİMLER\topkapı2.jpg">
+          <img class="img-fluid w-100" src="RESİMLER\topkapı2.jpg" alt="topkapı sarayı">
           <h1 class="display-6 başlık">-TOPKAPI SARAYI-</h1>
         </div>  
       </div>
@@ -31,7 +31,7 @@
   </div> 
 </div>
 
-<div class="container-fluid mx-3 px-5 text-justify py-2 mb-4">
+<div class="container-fluid mx-3 px-5 text-justify  mb-4">
   <div class="row">
     <div class="col-12">
       <p>Osmanlı İmparatorluğunun idare merkezi Topkapı Sarayı, tarihi boyunca 4 binden fazla önemli kişinin ağırlandığı yer olmuş. Buraya kimler gelmemiş ki? İmparatorlar, krallar, komutanlar, elçiler, tüccarlar, din adamları… Dünyanın dört bir köşesinden tarihin en önemli kişilikleri, Osmanlı padişahlarının huzuruna çıkmak için İstanbul’u ziyaret ettiklerinde Topkapı Sarayı’nda karşılanmış. Hazine Odası, Harem ve Saltanat Kapısı gibi bölümlerden oluşan avlulu bir yapıya sahip Topkapı Sarayı, inşa edildiği ilk zamanlardan beri Osmanlı’nın kalbi konumunda olmuş ve imparatorluk ışığı, buradan tüm cihana yayılmış…
@@ -42,9 +42,9 @@
 </div>
 
 
-<div class="container-fluid m-3 px-5 text-justify py-2 mb-4">
+<div class="container-fluid m-3 px-5 text-justify  mb-4">
   <div class="row ">
-    <div class="col-xl-6 col-sm-12 tanıtım mb-4">
+    <div class="col-xl-6 col-sm-12 tanıtım mb-4  p-4 ">
       <h3>FATİH SULTAN MEHMET VE İSTANBUL</h3>
       <p>Fatih Sultan Mehmed, fetihten sonra Beyazıt’ta bugünkü İstanbul Üniversitesi’nin bulunduğu yerde, daha sonra “Eski Saray” olarak anılacak olan bir saray yaptırmıştır.
         Fatih, bu ilk saraydan sonra, önce Çinili Köşk’ü, ardından da yapımı tamamlandığında yerleşecek olduğu Topkapı Sarayı’nı inşa ettirmiştir. Fatih, bu saraya Osmanlıca'da 
@@ -61,15 +61,15 @@
 </div>
 </div>
 
-<div class="container-fluid m-3 px-5 text-justify py-2 mb-4">
+<div class="container-fluid m-3 px-5 text-justify  mb-4">
   <div class="row">
-    <div class="col-xl-6 col-sm-9 mx-sm-auto">
+    <div class="col-xl-6 col-sm-12 mx-sm-auto">
       <h3 class="küçükbaşlık">TOPKAPI'NIN MİMARİSİ</h3>
-      <div><img class="img-fluid img-thumbnail mb-4" src="RESİMLER\topiçi.jpg">
+      <div><img class="img-fluid img-thumbnail mb-4" src="RESİMLER\topiçi.jpg" alt="topkapı mimarisi">
     </div>
   </div>
 
-  <div class="col-xl-6 col-sm-12  tanıtım ">
+  <div class="col-xl-6 col-sm-12 p-4 tanıtım ">
     <p>
      Topkapı Sarayı’nın tek mimari yoktur. Fatih Sultan Mehmet tarafından tasarlanan bu kompleks yapı, dönemin en ünlü mimarları olan Alaüddin’in baş mimarlığında inşa edilmiş ve zaman içerisinde Davud Ağa, Mimar Sinan, Sarkis Balyan, Acem Ali gibi isimlerin çalışmalarıyla geliştirilmiştir.
     Topkapı Sarayı; üçü limanda, dördü karada olmak üzere yedi kapılı sur içerisinde kasır, köşk, cami, divan, devlet dairesi, mutfak, koğuş, harem ve bahçe gibi yapılardan oluşur. Topkapı Sarayı’nın mimarisi büyüleyicidir; Fatih Sultan Mehmet, Osmanlı mimarisinin tüm özelliklerini bu yapıda toplamış!
@@ -84,9 +84,9 @@
   </div>
 </div>
 
-<div class="container-fluid m-3 px-5 text-justify py-2 mb-4">
+<div class="container-fluid m-3 px-5 text-justify mb-4">
   <div class="row ">
-  <div class="col-xl-6 col-sm-12 tanıtım mb-4 ">
+  <div class="col-xl-6 col-sm-12 tanıtım mb-4  p-4  ">
     <h3>ZİYARET SAATLERİ VE ÜCRET</h3>
     <p>
       Bilet gişelerinden saat 16.00’ya kadar alacağınız biletler ile kış sezonunda müze, Harem ve Aya İrini bölümlerini saat 09.00 ile 16.45’e kadar, yaz sezonunda ise saat 09.00’dan 18.45’e kadar ziyaret edebilirsiniz. 
@@ -95,16 +95,16 @@
   <p>Topkapı Sarayı Müzesi’ne gitmek için tramvayı kullanabilirsin. T1 kodlu, Kabataş ile Bağcılar arasında düzenli sefer yapan tramvaylara binerek Gülhane ya da Sultanahmet durağında indikten sonra kısa bir yürüyüşle oraya varabilirsin. Topkapı Sarayı Müzesi gezisinden sonra Sultanahmet, Gülhane ve Çemberlitaş çevresinde görülebilecek birçok başka yer de var,
      aklında bulunsun.</p>  
   </div>
-  <div class="col-xl-6 col-sm-9 mx-sm-auto ">
-    <div><img class="img-fluid img-thumbnail" src="RESİMLER\topkapı3.jpg">
+  <div class="col-xl-6 col-sm-12 mx-sm-auto ">
+    <div><img class="img-fluid img-thumbnail" src="RESİMLER\topkapı3.jpg" alt="topkkapı sarayı">
   </div>
 </div>
   </div>
 </div>
 
-<div class="container-fluid m-3 px-5 text-justify py-2 mb-4">
+<div class="container-fluid m-3 px-5 text-justify mb-4">
   <div class="row">
-    <div class="col-sm-9 col-lg-12 mx-sm-auto ">
+    <div class="col-sm-12 col-lg-12 mx-sm-auto ">
       <h3>TOPKAPI MÜZESİNİN KONUMU</h3>
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12042.511123082175!2d28.9833789!3d41.0115195!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x15aa1943c3015300!2zVG9wa2FwxLEgU2FyYXnEsSBNw7x6ZXNp!5e0!3m2!1str!2str!4v1650977121857!5m2!1str!2str" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
