--- a/İLETİŞİM.html
+++ b/İLETİŞİM.html
@@ -9,13 +9,40 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1254" />
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
-
+    <!--menü-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
    
     
 </head>
 
 <body>
-<div class="container">
+    <div><!--menü-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark  menü">
+            <div class="container-fluid">
+                <a class="navbar-brand disabled text-white">ALEYNA KARA</a>
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <div class="navbar-nav">
+                        <a href="anasayfa.html" class="nav-item nav-link  text-white-50">ANA SAYFA</a>
+                        <a href="Sehrim.html" class="nav-item nav-link text-white-50">ŞEHRİM VE MİRASIMIZ</a>
+                        <a href="CV.html" class="nav-item nav-link text-white-50 ">ÖZGEÇMİŞİM</a>
+                        <a href="İlgiAlanlarım.html" class="nav-item nav-link text-white-50">İLGİ ALANLARIM</a>                    
+                    </div>
+                    <div class="navbar-nav ms-auto">
+                        <a href="İLETİŞİM.html" class="nav-item nav-link text-white-50 active" tabindex="-1">İLETİŞİM</a>
+                        <a href="giriş.html" class="nav-item nav-link text-white-50">GİRİŞ YAP</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </div>
+
+
+
+<div class="container mt-4">
         <div class="bg-dark text-white text-center py-3 ">
              <h2>İLETİŞİM SAYFASI</h2>
         </div>
@@ -172,7 +199,7 @@
                             <br>
                             <div class="text-center"><!--BUTONLAR-->
                                 <input type="submit" value="GÖNDER" class="btn btn-success btn-block" onclick="kontrol()" >
-                                <input type="reset" value="SİL" class="btn btn-info btn-block">
+                                <input type="reset" value="SİL" class="btn btn-danger btn-block">
                             </div>
                         </div>
                     </div>
