--- a/CV.html
+++ b/CV.html
@@ -4,16 +4,21 @@
     <title>CV</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Sakarya Üniversitesi Web Teknolojileri Ödevi anasayfa">
+  <meta name="keywords" content="özgeçmiş,cv,sakarya üniversitesi ödev">   
+  <meta name="author" content="Aleyna Kara">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="cvstil.css" />
   <!--meü için-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="anasayfastil.css" />
+  <link rel="stylesheet" type="text/css" href="cvstil.css" />
+
 
 
 
@@ -54,7 +59,7 @@
                         <br>
                         <h3>İLETİŞİM</h3>
                         <hr>
-                         <ul id="listeişaret" >
+                         <ul >
                           <li>TELEFON : 0537 275 0218</li>
                           <li>E-MAIL : aleynakara.16@hotmail.com</li>
                           <li>GİTHUB :<a href="https://twitter.com/_aleynakara_" target="_blank"> @aleyna_karaa_</a></li>
@@ -75,9 +80,9 @@
                     <hr>
                     <p>Doğma büyüme İstanbulluyum.Beylikdüzünde yaşıyorum.20 yaşındayım ve Sakarya Üniversitesinde Bilgisayar Mühendisliği okuyorum.O yüzden şuanda Sakarya'da kalıyorum.
                         <ul>
-                            <li>DOĞUM TARİHİ VE YERİ : 18.02.2002 ,Bahçelievler</li>
-                            <li>SÜRÜCÜ EHLİYETİ : yok.</li>
-                            <li>MEDENİ DURUMU : bekar</li>
+                            <li>-DOĞUM TARİHİ VE YERİ : 18.02.2002 ,Bahçelievler</li>
+                            <li>-SÜRÜCÜ EHLİYETİ : yok.</li>
+                            <li>-MEDENİ DURUMU : bekar</li>
                             <li>-sıgara ve alkol kullanmıyorum.</li>
                         </ul>
                     </p>
@@ -98,8 +103,8 @@
                     <hr>
                     <p>
                         <ul>
-                            <li>BİLGİSAYAR BECERİLERİ : Office programları(orta),c++(orta),c#(orta) ve html-css-javascript(orta)</li>
-                            <li>YABANCI DİL BECERİLERİ : İNGİLİZCE(Okuma:orta ,Yazma:orta,Dinleme :orta,Konuşma:zayıf) </li>
+                            <li>-BİLGİSAYAR BECERİLERİ : Office programları(orta),c++(orta),c#(orta) ve html-css-javascript(orta)</li>
+                            <li>-YABANCI DİL BECERİLERİ : İNGİLİZCE(Okuma:orta ,Yazma:orta,Dinleme :orta,Konuşma:zayıf) </li>
                         </ul>
                     </p><br>
 
