--- a/Mirasımız.html
+++ b/Mirasımız.html
@@ -3,6 +3,9 @@
   <head>
     <title>Mirasımız.com</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Sakarya Üniversitesi Web Teknolojileri Ödevi anasayfa">
+    <meta name="author" content="Aleyna Kara">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:300,400|Roboto|Open+Sans:300,400,700">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
