--- a/giriş.html
+++ b/giriş.html
@@ -2,6 +2,10 @@
 <html >
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Sakarya Üniversitesi Web Teknolojileri Ödevi anasayfa">
+<meta name="keywords" content="giriş,login,sakarya üniversitesi ödev">
+<meta name="author" content="Aleyna Kara">
 <title>LOG IN</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
