--- a/anasayfa.html
+++ b/anasayfa.html
@@ -4,6 +4,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Sakarya Üniversitesi Web Teknolojileri Ödevi anasayfa">
+<meta name="keywords" content="hakkımda,anasayfa,sakarya üniversitesi ödev">
+<meta name="author" content="Aleyna Kara">
 <title>ana sayfa</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -43,7 +46,7 @@
 
 
  <div class="container-fluid"><!-- HAKKIMDA BAŞLIĞI-->
-    <div class="row justify-content-sm-center mt-1 mb-4 başlık pb-0" >
+    <div class="row  mt-1 mb-4 başlık pb-0" >
       <h1 class="display-5 text-light">HAKKIMDA</h1>
     </div>
  </div>
@@ -85,21 +88,20 @@
  
   </div>
 </div>
+<br>
 
 
 <div class="container-fluid ">
   <div class="row">
     <div class="col">
-     <div class="accordion" id="accordionExample">
+     <div class="accordion">
         <div class="card">
-          <div class="card-header" id="headingOne">
+          <div class="card-header" >
        <h5 class="mb-0">
-         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-           SEVDİĞİM BAZI FİLMLER/DİZİLER
-         </button>
+         <h3>SEVDİĞİM BAZI FİLMLER/DİZİLER</h3>
        </h5>
            </div>
-              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+              <div  >
                  <div class="card-body">
                     <img src="RESİMLER\disenchantmentt.jpg" class="img-fluid" style="width: 200px;" alt="disenchantment">
                     <img src="RESİMLER\esaretinbedeli.jpg" class="img-fluid" style="width: 200px;" alt="esaretin bedeli">
