--- a/Sehrim.html
+++ b/Sehrim.html
@@ -27,7 +27,7 @@
 
 <body >
 
-  <div><!--menü-->
+<div><!--menü-->
     <nav class="navbar navbar-expand-lg navbar-light bg-dark  menü">
         <div class="container-fluid">
             <a class="navbar-brand disabled text-white">ALEYNA KARA</a>
@@ -54,8 +54,8 @@
 <div class="row align-items-center  "><!--ANA BAŞLIK-->
 	  <div class="col w-100 anabaşlık ">
 		  <h1 class="display-1 text-center p-4  "> - İSTANBUL -</h1><span ><img class="img-fluid w-100" src="RESİMLER\3.jpg"></span>
-	   </div>
-	</div> 
+	  </div>
+</div> 
 	  
  <div class="container-fluid ortabaşlık mt-3 "><!--ORTA-->
 	  <div class="row ">
@@ -63,7 +63,7 @@
 		    <h1 class="display-5 text-center">istanbul'dan Kareler</h1>
       </div>
 	  </div >
-	</div>
+</div>
 
 
 <div class="container-fluid mx-3 my-2"><!--slider ve yan-->
@@ -71,30 +71,30 @@
     <div class=" col-xl-4 col-sm-12"><!--SLİDER-->
       <div id="slider" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner text-center">
-        <div class="carousel-item active ">      
+          <div class="carousel-item active ">      
            <a href="#kızkulesi"> <img class="d-block w-100"  src="RESİMLER\kızkulesi2.jpg"height="400px" alt="kız kulesi"></a>
-        </div>
-        <div class="carousel-item">
+          </div>
+          <div class="carousel-item">
          <a href="#galata"><img class="d-block w-100" src="RESİMLER\galata2.jpg"height="400px" alt="galata kulesi"></a>
-        </div>
-        <div class="carousel-item">
+          </div>
+          <div class="carousel-item">
           <a href="#balat"><img  class="d-block w-100" src="RESİMLER\b.jpg"height="400px" alt="balat"></a>
-        </div>
-        <div class="carousel-item">
+          </div>
+          <div class="carousel-item">
          <a href="#tramvay"><img  class="d-block w-100" src="RESİMLER\tramvay.png" height="400px" alt="kırmızı tramvay"></a> 
+          </div>
         </div>
-        </div>
+
         <a href="#slider" class="carousel-control-prev " data-slide="prev">
         <span class="carousel-control-prev-icon"></span>
         </a>
         <a href="#slider" class="carousel-control-next" data-slide="next">
         <span class="carousel-control-next-icon"></span>
         </a>
-        </div>
-      
-    </div>
+      </div>
+  </div>
        
-    <div class="col-xl-8 col-sm-12 container text-justify pr-5 ">
+  <div class="col-xl-8 col-sm-12 container text-justify pr-5 ">
       <h2 class="diğerbaşlıklar">KISACA</h2>
       <p >
         İstanbul, Türkiye’nin en kalabalık şehri olmasının yanısıra dünyanın en önemli kültür ve finans merkezlerinden biridir. Bir koluyla Asya’ya, diğeriyle Avrupa’ya uzanarak iki kıtayı da kucaklayan, iki kıtada da toprağı olan tek büyükşehirdir.
@@ -264,7 +264,7 @@
 
 </div>
 
-<footer class="bg-dark text-white">
+<footer class="bg-dark text-white-50">
    
   <small><i>&copy 2022 Telif Hakları Saklıdır<br> aleyna kara</i></small>
 
