--- a/anasayfa.html
+++ b/anasayfa.html
@@ -1,6 +1,5 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,6 +13,7 @@
 
 </head>
 <body>
+
 <div><!--menü-->
     <nav class="navbar navbar-expand-lg navbar-light bg-dark  menü">
         <div class="container-fluid">
@@ -38,21 +38,18 @@
     </nav>
 </div>
 
-
 <div class="container-flu"> <!-- GİRİŞTEKİ RESİM EKLENDİ-->
     <img class="img-fluid  w-100 "  src="RESİMLER/bilgisayar.jpg" alt="çalışma masası">
-  </div>
+</div>
 
-
-
- <div class="container-fluid"><!-- HAKKIMDA BAŞLIĞI-->
+<div class="container-fluid"><!-- HAKKIMDA BAŞLIĞI-->
     <div class="row  mt-1 mb-4 başlık pb-0" >
       <h1 class="display-5 text-light">HAKKIMDA</h1>
     </div>
- </div>
+</div>
 
 
- <div class="container-fluid mx-auto px-4"> <!--KENDİMİ TANITTIĞIM KISIM-->
+<div class="container-fluid mx-auto px-4"> <!--KENDİMİ TANITTIĞIM KISIM-->
 
   <div class="row">
       <div class=" col-sm-12">
@@ -71,9 +68,9 @@
               <dt>KİTAP OKUMAK</dt>
               <dd>-Fantastik türlerde okumayı çok severim ama bu aralar gizem ve aksiyona merak sardım</dd>
               <dt>RESİM ÇİZMEK</dt>
-              <dd>-Bu aralar çok sık yaptığım birşey.Özellikle sıkılnca birşeyler çizmeyi çok seviyorum.</dd>
+              <dd>-Sıkılnca birşeyler çizmeyi çok seviyorum.</dd>
               <dt>DİĞER</dt>
-              <dd>-Eskiden paten de sürerdim.Hatta yeniden başlamayı bile düşünüorum</dd>
+              <dd>-Eskiden paten de sürerdim.Hatta yeniden başlamayı bile düşünüyorum</dd>
             </dl>    
           </p>
      </div>
@@ -81,7 +78,7 @@
       <div class="col-lg-6 col-sm-12">
       <h3>OKUL HAYATIM</h3>
       <p>İlkokul,ortaokul(Pınarkule İlkokulu-ortaokulu) ve liseyi(Cahit Zarifoğlu anadolu Lisesi) İstanbul'da okudum.Şuan Sakarya Üniversitesinde bilgisayar mühendisliği okuyorum.1.Sınıf öğrencisiyim.
-        Sakarya üniversitesinin resmi hesabına ulaşmak için <a target=" target=_blank" href="https://www.sakarya.edu.tr/">buraya </a>tıklayabilirisinz.
+        Sakarya üniversitesinin resmi hesabına ulaşmak için <a target=" target=_blank" href="https://www.sakarya.edu.tr/">buraya </a>tıklayabilirisiniz.
       </p>
       <img class="img-fluid pb-2"  src="RESİMLER\saü.jpg" alt="sakarya üniversitesi">
       </div>
@@ -97,10 +94,11 @@
      <div class="accordion">
         <div class="card">
           <div class="card-header" >
-       <h5 class="mb-0">
-         <h3>SEVDİĞİM BAZI FİLMLER/DİZİLER</h3>
-       </h5>
+              <h5 class="mb-0">
+                <h3>SEVDİĞİM BAZI FİLMLER/DİZİLER</h3>
+              </h5>
            </div>
+           
               <div  >
                  <div class="card-body">
                     <img src="RESİMLER\disenchantmentt.jpg" class="img-fluid" style="width: 200px;" alt="disenchantment">
@@ -119,11 +117,9 @@
 </div>
 
   
-  <footer class="bg-dark text-white">
-   
-      <small><i>&copy 2022 Telif Hakları Saklıdır<br> aleyna kara</i></small>
-   
-  </footer>
+<footer class="bg-dark text-white-50">
+  <small><i>&copy 2022 Telif Hakları Saklıdır<br> aleyna kara</i></small>
+</footer>
  
  
 </body>
