--- a/İlgiAlanlarım.html
+++ b/İlgiAlanlarım.html
@@ -54,7 +54,7 @@
               <input type = "text" class = "form-control"  placeholder="aradığınız film..." id = "movie-search-box" onkeyup="findMovies()" onclick = "findMovies()">
 
               <div class = "search-list mt-1" id = "search-list">
-                  <!-- list here -->
+                  <!-- list burada -->
                     <div class = "search-list-item "></div>
               </div>
           </div>
