--- a/CV.html
+++ b/CV.html
@@ -19,7 +19,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" type="text/css" href="cvstil.css" />
 
-
+</head>
 
 
 <body>
@@ -120,15 +120,10 @@
             </div>
         </div>
     </section>
-
-
-
-
-
 </article>
 
 
-<footer class="bg-dark text-white mt-3">
+<footer class="bg-dark text-white-50 mt-3">
    
     <small><i>&copy 2022 Telif Hakları Saklıdır<br> aleyna kara</i></small>
      
