--- a/Mirasımız.html
+++ b/Mirasımız.html
@@ -44,7 +44,6 @@
   </div>
 </div>
 
-
 <div class="container-fluid m-3 px-5 text-justify  mb-4">
   <div class="row ">
     <div class="col-xl-6 col-sm-12 tanıtım mb-4  p-4 ">
@@ -114,9 +113,7 @@
   </div>
 </div>
 
-
-
-<footer class="bg-dark text-white">
+<footer class="bg-dark text-white-50">
    
   <small><i>&copy 2022 Telif Hakları Saklıdır<br> aleyna kara</i></small>
 
