--- a/İLETİŞİM.html
+++ b/İLETİŞİM.html
@@ -215,7 +215,7 @@
         </div>
     </div>
 
-<footer class="bg-dark text-white">
+<footer class="bg-dark text-white-50">
    
         <small><i>&copy 2022 Telif Hakları Saklıdır<br> aleyna kara</i></small>
      
