--- a/Sehrim.html
+++ b/Sehrim.html
@@ -19,6 +19,9 @@
         <!--menü-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="sehrimstil.css" />
 
 
@@ -161,7 +164,7 @@
 
 <div class="container-fluid tanıtım mb-0 " ><!--TANITIM KISMI-->
 
-  <div class="row  my-5 px-4"> <!--GALATA KULESİ TANITIM-->
+  <div class="row "> <!--GALATA KULESİ TANITIM-->
     
     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4"><!--resim-->
       <a name="galata"></a>
@@ -171,7 +174,7 @@
 
     <div class="col-xl-8 col-sm-12 "> <!--yazı-->  
       <h1 class="diğerbaşlıklar">GALATA KULESİ</h1>  
-      <p>Galata Kulesi, İstanbul'un Beyoğlu ilçesinde, Bereketzade Mahallesi'nin Galata bölümünde yer alıyor. Şehrin Avrupa tarafına inşa edilmiş olan Galata Kulesi, Şişhane-Karaköy arasında Boğaz'a hakim bir konumda yer alıyor.
+      <p >Galata Kulesi, İstanbul'un Beyoğlu ilçesinde, Bereketzade Mahallesi'nin Galata bölümünde yer alıyor. Şehrin Avrupa tarafına inşa edilmiş olan Galata Kulesi, Şişhane-Karaköy arasında Boğaz'a hakim bir konumda yer alıyor.
         Tarihi boyunca birçok kez harap olup tekrar restore edilen Kız Kulesi, 1998 yılında başlayan restorasyon çalışmalarının ardından 2000 yılında turizme açıldı.Kız Kulesi'nin bir efsanesi var, üstelik o kadar romantik ki…Galata Kulesi ilk olarak Bizans İmparatoru Justinianos tarafından MS 507-508 yılında inşa edilmiştir.
          Günümüzdeki kuleyi 1348 - 49 yılında Cenevizliler yeniden inşa etmiştir. Kule 1445 - 46 yılları arasında yükseltilmiştir. Hezarfen Ahmed Çelebi, dünyada ilk kez uçmayı başaran Türk bilginidir. 17. yüzyılda yaşadığı, 1623-1640 yılları arasında saltanat süren Sultan 4. Murad zamanında, uçma tasarısını gerçekleştirdiği ve geniş bilgisinden ötürü halk arasında Hezarfen olarak anıldığı bilinmektedir.
          Evinde deneylerle uğraşıp, çeşitli konularda araştırmalar yapan Hezârfen Ahmed Çelebi İsmail Cevheri adlı bir başka Türk bilginini örnek alarak, bugünkü hava taşıtlarının ilkel şeklini gerçekleştirmişti. Kuşların uçuşunu inceleyerek tarihi uçuşundan önce hazırladığı tahtadan kanatlarının dayanıklılık derecesini ölçmek için, Okmeydanı'nda deneyler yapmış ve bir sabah kıyılarda biriken İstanbul halkının gözleri önünde, Galata Kulesi'nden kendisini boşluğa bırakarak, kanatlarını hareket ettirerek boğazı aşmış ve Üsküdar'ın Doğancılar semtine inmiştir. Bu uçuş Avrupa'da ilgi ile karşılanmış, İngiltere'de bu uçuşu gösteren gravürler yapılmıştır.
