--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav">
-                    <a href="anasayfa.html" class="nav-item nav-link active text-white-50">ANA SAYFA</a>
+                    <a href="index.html" class="nav-item nav-link active text-white-50">ANA SAYFA</a>
                     <a href="Sehrim.html" class="nav-item nav-link text-white-50">ŞEHRİM VE MİRASIMIZ</a>
                     <a href="CV.html" class="nav-item nav-link text-white-50">ÖZGEÇMİŞİM</a>
                     <a href="İlgiAlanlarım.html" class="nav-item nav-link text-white-50">İLGİ ALANLARIM</a>                    
