--- a/İLGİ ALANIM/İlgiAlanlarım.html
+++ b/İLGİ ALANIM/İlgiAlanlarım.html
@@ -31,7 +31,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav">
-                        <a href="anasayfa.html" class="nav-item nav-link  text-white-50">ANA SAYFA</a>
+                        <a href="index.html" class="nav-item nav-link  text-white-50">ANA SAYFA</a>
                         <a href="Sehrim.html" class="nav-item nav-link text-white-50">ŞEHRİM VE MİRASIMIZ</a>
                         <a href="CV.html" class="nav-item nav-link text-white-50 active">ÖZGEÇMİŞİM</a>
                         <a href="İlgiAlanlarım.html" class="nav-item nav-link text-white-50">İLGİ ALANLARIM</a>                    
