--- a/Sehrim.html
+++ b/Sehrim.html
@@ -56,7 +56,7 @@
 
 <div class="row align-items-center  "><!--ANA BAŞLIK-->
 	  <div class="col w-100 anabaşlık ">
-		  <h1 class="display-1 text-center p-4  "> - İSTANBUL -</h1><span ><img class="img-fluid w-100" src="RESİMLER\3.jpg"></span>
+		  <h1 class="display-1 text-center p-4  "> - İSTANBUL -</h1><img class="img-fluid w-100" src="RESİMLER\3.jpg">
 	  </div>
 </div> 
 	  
