cv de bilgilerin bazıları gizlendi

--- a/CV.html
+++ b/CV.html
@@ -60,14 +60,14 @@
                         <h3>İLETİŞİM</h3>
                         <hr>
                          <ul >
-                          <li>TELEFON : 0537 275 0218</li>
+                          <li>TELEFON : 0537 *** 0218</li>
                           <li>E-MAIL : aleynakara.16@hotmail.com</li>
                           <li>GİTHUB :<a href="https://twitter.com/_aleynakara_" target="_blank"> @aleyna_karaa_</a></li>
                           <li>LİNKEDİN :<a href="https://www.linkedin.com/in/aleyna-kara-0a5690218/" target="_blank"> @aleyna kara</a></li>
                           <li>İNSTAGRAM :<a href="https://www.instagram.com/aleyna_karaa_/" target="_blank">@aleyna_karaa_</a></li>
                           <li>TWİTTER :<a href="https://twitter.com/_aleynakara_" target="_blank"> @aleyna_karaa_</a></li><br>
-                          <li>ADRES-1 : Adnan Kahveci Mahallesi,Anadolu Caddesi,Anadolu Apartmanı,Beylikdüzü,İstanbul</li><br>
-                          <li>ADRES-2 : Kemalpaşa Mahallesi,Üniversite Caddesi,KYK kız öğrenci yurdu,Serdivan,Sakarya</li>
+                          <li>ADRES-1 : Adnan Kahveci Mahallesi,A***** Caddesi,A***** Apartmanı,Beylikdüzü,İstanbul</li><br>
+                          <li>ADRES-2 : K***** Mahallesi,Ü**** Caddesi,Serdivan,Sakarya</li>
 
 
                          </ul>
