--- a/İlgiAlanlarım.html
+++ b/İlgiAlanlarım.html
@@ -33,8 +33,8 @@
                     <div class="navbar-nav">
                         <a href="index.html" class="nav-item nav-link  text-white-50">ANA SAYFA</a>
                         <a href="Sehrim.html" class="nav-item nav-link text-white-50">ŞEHRİM VE MİRASIMIZ</a>
-                        <a href="CV.html" class="nav-item nav-link text-white-50 active">ÖZGEÇMİŞİM</a>
-                        <a href="İlgiAlanlarım.html" class="nav-item nav-link text-white-50">İLGİ ALANLARIM</a>                    
+                        <a href="CV.html" class="nav-item nav-link text-white-50 ">ÖZGEÇMİŞİM</a>
+                        <a href="İlgiAlanlarım.html" class="nav-item nav-link text-white-50 active">İLGİ ALANLARIM</a>                    
                     </div>
                     <div class="navbar-nav ms-auto">
                         <a href="İLETİŞİM.html" class="nav-item nav-link text-white-50" tabindex="-1">İLETİŞİM</a>
@@ -67,7 +67,7 @@
               <div class = "result-grid  " id = "result-grid">
                   <!-- burada film bilgileri -->
                   <div class = "movie-poster ">
-                      <img class="img-fluid"  src = "RESİMLER/galaxinin koruyucuları.jpg" alt = "movie poster">
+                      <img class="img-fluid"  src = "RESİMLER/galaxinin.jpg koruyucuları.jpg" alt = "movie poster">
                   </div>
 
                   <div class = "movie-info p-3 m-0 ">
