--- a/Sehrim.html
+++ b/Sehrim.html
@@ -53,12 +53,19 @@
     </nav>
 </div>
 
+<div class="row"><!--RESİM VE BAŞLIK-->
+  <div class="col-12">
+    <div class="carousel ">
+      <div class="carousel-inner ">
+        <div class="carousel-item active ">    
+          <h1 class="display-1 text-center p-4 anabaşlık mb-0 "> - İSTANBUL -</h1>  
+          <img class="img-fluid w-100" src="RESİMLER\3.jpg" alt="cami">
+        </div>  
+      </div>
+    </div>
+  </div> 
+</div>
 
-<div class="row align-items-center  "><!--ANA BAŞLIK-->
-	  <div class="col w-100 anabaşlık ">
-		  <h1 class="display-1 text-center p-4  "> - İSTANBUL -</h1><img class="img-fluid w-100" src="RESİMLER\3.jpg">
-	  </div>
-</div> 
 	  
  <div class="container-fluid ortabaşlık mt-3 "><!--ORTA-->
 	  <div class="row ">
