--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 <link rel="stylesheet" type="text/css" href="anasayfastil.css" />
 
 </head>
+
 <body>
 
 <div><!--menü-->
     <nav class="navbar navbar-expand-lg navbar-light bg-dark  menü">
         <div class="container-fluid">
             <a class="navbar-brand disabled text-white">ALEYNA KARA</a>
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <button type="button " class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -46,7 +47,7 @@
     <div class="row  mt-1 mb-4 başlık pb-0" >
       <h1 class="display-5 text-light">HAKKIMDA</h1>
     </div>
-</div>
+</div><br>
 
 
 <div class="container-fluid mx-auto px-4"> <!--KENDİMİ TANITTIĞIM KISIM-->
@@ -85,7 +86,7 @@
  
   </div>
 </div>
-<br>
+<br><br><br>
 
 
 <div class="container-fluid ">
@@ -95,7 +96,7 @@
         <div class="card">
           <div class="card-header" >
               <h5 class="mb-0">
-                <h3>SEVDİĞİM BAZI FİLMLER/DİZİLER</h3>
+                <h3 id="kartbaşlık">SEVDİĞİM BAZI FİLMLER/DİZİLER</h3>
               </h5>
            </div>
            
@@ -114,7 +115,35 @@
       </div>
      </div>
   </div>
-</div>
+</div><br>
+
+<div class="container-fluid ">
+  <div class="row">
+    <div class="col">
+     <div class="accordion">
+        <div class="card">
+          <div class="card-header" >
+              <h5 class="mb-0">
+                <h3 id="kartbaşlık">OKUDUĞUM BAZI KİTAPLAR</h3>
+              </h5>
+           </div>
+           
+              <div  >
+                 <div class="card-body">
+                    <img src="RESİMLER/origin.jpg" class="img-fluid py-2" style="width: 200px;" alt="origin">
+                    <img src="RESİMLER/madam-bovary-1.jpg" class="img-fluid" style="width: 200px;" alt="madam bovary">
+                    <img src="RESİMLER/çanlar.jpg" class="img-fluid" style="width: 200px;" alt="çanlar kimin için çalıyor">
+                    <img src="RESİMLER/gazap üzümleri.jpg" class="img-fluid" style="width: 200px;" alt="gazap üzümleri">
+                    <img src="RESİMLER/çalıkuşu.jpg" class="img-fluid" style="width: 200px;" alt="çalıkuşu">
+                    <img src="RESİMLER/kafes.jpg" class="img-fluid" style="width: 200px;" alt="bir box">
+
+                  </div>
+              </div>
+        </div>
+      </div>
+     </div>
+  </div>
+</div><br>
 
   
 <footer class="bg-dark text-white-50">
