--- a/İlgiAlanlarım.html
+++ b/İlgiAlanlarım.html
@@ -46,13 +46,12 @@
 </div>
 
  
-<div class = "wrapper">
+<div>
       <!-- arama containerı -->
       <div class = "search-container ">
           <div class = "search-element">
               <h3>FİLM ARAYIN:</h3>
               <input type = "text" class = "form-control"  placeholder="aradığınız film..." id = "movie-search-box" onkeyup="findMovies()" onclick = "findMovies()">
-
               <div class = "search-list mt-1" id = "search-list">
                   <!-- list burada -->
                     <div class = "search-list-item "></div>
@@ -67,7 +66,7 @@
               <div class = "result-grid  " id = "result-grid">
                   <!-- burada film bilgileri -->
                   <div class = "movie-poster ">
-                      <img class="img-fluid"  src = "RESİMLER/galaxinin.jpg koruyucuları.jpg" alt = "movie poster">
+                      <img class="img-fluid"  src = "RESİMLER/galaxinin.jpg" alt = "movie poster">
                   </div>
 
                   <div class = "movie-info p-3 m-0 ">
